--- a/modules/integration/tests-integration/tests-backend/pom.xml
+++ b/modules/integration/tests-integration/tests-backend/pom.xml
@@ -34,10 +34,10 @@
                 <inherited>false</inherited>
                 <version>2.12.4</version>
                 <configuration>
-                    <!--argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine-->
-                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m
+                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine>
+                    <!--argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m
                         -Dorg.apache.jasper.compiler.disablejsr199=true
-                    </argLine>
+                    </argLine-->
                     <suiteXmlFiles>
                         <!--<suiteXmlFile>src/test/resources/testng-server-mgt.xml</suiteXmlFile>-->
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
@@ -611,6 +611,24 @@
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.agent</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
+            <artifactId>org.wso2.carbon.databridge.commons</artifactId>
+            <version>5.0.11</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
+            <artifactId>org.wso2.carbon.databridge.core</artifactId>
+            <version>5.0.11</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
+            <artifactId>org.wso2.carbon.databridge.receiver.thrift</artifactId>
+            <version>5.0.11</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
