--- a/pom.xml
+++ b/pom.xml
@@ -564,12 +564,12 @@
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-                <version>${carbon.identity.extension.oauth2.version}</version>
+                <version>${carbon.identity.inbound.auth.oauth.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
-                <version>${carbon.identity.extension.oauth2.version}</version>
+                <version>${carbon.identity.inbound.auth.oauth.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -1168,7 +1168,7 @@
         <carbon.identity.email.mgt.version>1.0.0-SNAPSHOT</carbon.identity.email.mgt.version>
         <carbon.identity.jar.version>5.5.0-SNAPSHOT</carbon.identity.jar.version>
         <carbon.identity.extension.version>5.1.1-SNAPSHOT</carbon.identity.extension.version>
-        <carbon.identity.extension.oauth2.version>5.2.0-SNAPSHOT</carbon.identity.extension.oauth2.version>
+        <carbon.identity.inbound.auth.oauth.version>5.2.0-SNAPSHOT</carbon.identity.inbound.auth.oauth.version>
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
