--- a/pom.xml
+++ b/pom.xml
@@ -1163,11 +1163,21 @@
 
     <properties>
         <carbon.identity.version>5.5.0-SNAPSHOT</carbon.identity.version>
-        <carbon.identity.governance.version>1.0.0-SNAPSHOT</carbon.identity.governance.version>
+        <carbon.identity.governance.version>1.0.0-SNAPSorg.wso2.carbon.user.mgt.workflowHOT</carbon.identity.governance.version>
         <carbon.identity.account.lock.version>1.0.0-SNAPSHOT</carbon.identity.account.lock.version>
         <carbon.identity.email.mgt.version>1.0.0-SNAPSHOT</carbon.identity.email.mgt.version>
         <carbon.identity.jar.version>5.5.0-SNAPSHOT</carbon.identity.jar.version>
-        <carbon.identity.extension.version>5.1.1-SNAPSHOT</carbon.identity.extension.version>
+        <carbon.identity.extension.version>5.1.0</carbon.identity.extension.version>
+        <org.wso2.carbon.user.mgt.workflow.version>5.1.1-SNAPSHOT</org.wso2.carbon.user.mgt.workflow.version>
+        <org.wso2.carbon.identity.provider.version>5.1.1-SNAPSHOT</org.wso2.carbon.identity.provider.version>
+        <org.wso2.carbon.identity.sso.saml.version>5.1.1-SNAPSHOT</org.wso2.carbon.identity.sso.saml.version>
+        <org.wso2.carbon.identity.sts.mgt.version>5.1.1-SNAPSHOT</org.wso2.carbon.identity.sts.mgt.version>
+        <org.wso2.carbon.identity.sts.passive.version>5.1.1-SNAPSHOT</org.wso2.carbon.identity.sts.passive.version>
+        <org.wso2.carbon.mex.version>5.1.1-SNAPSHOT</org.wso2.carbon.mex.version>
+        <org.wso2.carbon.sts.version>5.1.1-SNAPSHOT</org.wso2.carbon.sts.version>
+        <org.wso2.carbon.identity.application.authenticator.requestpath.basicauth.version>5.1.1-SNAPSHOT
+        </org.wso2.carbon.identity.application.authenticator.requestpath.basicauth.version>
+        <carbon.identity.local.auth.iwa.version>5.2.0-SNAPSHOT</carbon.identity.local.auth.iwa.version>
         <carbon.identity.inbound.auth.oauth.version>5.2.0-SNAPSHOT</carbon.identity.inbound.auth.oauth.version>
         <product.identity.version>5.3.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
